--- a/ForecastsBlazor/Pages/FetchData.razor
+++ b/ForecastsBlazor/Pages/FetchData.razor
@@ -1,10 +1,11 @@
 ﻿@page "/fetchdata"
 @using ForecastsBlazor.Data
+@using ForecastsCommon.JsonEntities
 @inject WeatherForecastService ForecastService
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Weather data</PageTitle>
 
-<h1>Weather forecast</h1>
+<h1>Weather data</h1>
 
 <p>This component demonstrates fetching data from a service.</p>
 
@@ -18,19 +19,21 @@ else
         <thead>
             <tr>
                 <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
+                <th>Temperature (C)</th>
+                <th>Pressure (hPa)</th>
+                <th>Humidity (%)</th>
+                <th>Wind (m/s)</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var forecast in forecasts)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <td>@forecast.Date</td>
+                    <td>@forecast.Main.Temperature</td>
+                    <td>@forecast.Main.Pressure</td>
+                    <td>@forecast.Main.Humidity</td>
+                    <td>@forecast.Wind.Speed</td>
                 </tr>
             }
         </tbody>
@@ -38,10 +41,10 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private ForecastsCommon.JsonEntities.Weather[]? forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateOnly.FromDateTime(DateTime.Now));
+        forecasts = await ForecastService.GetForecastAsync();
     }
 }
