--- a/ForecastsBlazor/Pages/Weather.razor
+++ b/ForecastsBlazor/Pages/Weather.razor
@@ -5,6 +5,8 @@
 
 <h1>Current weather</h1>
 
+<p>This component demonstrates fetching current weather data from RabbitMQ.</p>
+
 <p role="status">@_currentWeather</p>
 
 @code {
