--- a/ForecastsBlazor/Pages/Index.razor
+++ b/ForecastsBlazor/Pages/Index.razor
@@ -2,8 +2,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, dear user!</h1>
 
-Welcome to your new app.
+Welcome to weather collection app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
