--- a/ForecastsBlazor/Pages/GraphData.razor
+++ b/ForecastsBlazor/Pages/GraphData.razor
@@ -16,6 +16,14 @@
 }
 else
 {
+    <p>
+    <select class="form-control" style="width:150px" @onchange=SelectedCityChanged>
+        @foreach (var template in templates)
+            {
+                <option value=@template>@template</option>
+            }
+        </select>
+    </p>
     <Chart Config="_temperature"></Chart>
     <Chart Config="_pressure"></Chart>
     <Chart Config="_humidity"></Chart>
@@ -27,10 +35,24 @@ else
     private LineConfig _pressure = new LineConfig();
     private LineConfig _humidity = new LineConfig();
     private LineConfig _speed = new LineConfig();
-    protected override async Task OnInitializedAsync()
+
+    private string selectedCity = string.Empty;
+    private string[] templates = new string[] { "Select city" };
+
+    private async void SelectedCityChanged(ChangeEventArgs e)
     {
-        var forecasts = await ForecastService.GetForecastAsync();
-        var forecastsArr = forecasts.ToArray();
+        selectedCity = e.Value?.ToString() ?? templates[0];
+
+        _temperature.Data.Labels.Clear();
+        _temperature.Data.Datasets.Clear();
+        _pressure.Data.Labels.Clear();
+        _pressure.Data.Datasets.Clear();
+        _humidity.Data.Labels.Clear();
+        _humidity.Data.Datasets.Clear();
+        _speed.Data.Labels.Clear();
+        _speed.Data.Datasets.Clear();
+
+        var forecastsArr = await ForecastService.GetForecastAsync(selectedCity);
         var labels = forecastsArr.Select(v => v.Date);
         foreach (var label in labels)
         {
@@ -69,5 +91,10 @@ else
         _pressure.Data.Datasets.Add(datasetP);
         _humidity.Data.Datasets.Add(datasetH);
         _speed.Data.Datasets.Add(datasetS);
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        templates = templates.Union(await ForecastService.GetCitiesNamesAsync()).ToArray();
     }
 }
