--- a/ForecastsBlazor/Shared/MainLayout.razor
+++ b/ForecastsBlazor/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>ForecastsBlazor</PageTitle>
+<PageTitle>Weather collector's visualization</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://github.com/ndmalygin/Forecaster" target="_blank">About</a>
         </div>
 
         <article class="content px-4">
