FIx namings for web app Update Forecaster.sln, App.razor, and 66 more files...

--- a/ForecastsWebApp/Pages/FetchData.razor
+++ b/ForecastsWebApp/Pages/FetchData.razor
@@ -1,5 +1,5 @@
 ﻿@page "/fetchdata"
-@using ForecastsBlazor.Data
+@using ForecastsWebApp.Data
 @inject WeatherForecastService ForecastService
 
 <PageTitle>Weather data</PageTitle>
