--- a/ForecastsWebApp/Pages/GraphData.razor
+++ b/ForecastsWebApp/Pages/GraphData.razor
@@ -1,7 +1,7 @@
 @page "/graphdata"
 @using ChartJs.Blazor.Util
 @using ChartJs.Blazor.LineChart
-@using ForecastsBlazor.Data
+@using ForecastsWebApp.Data
 @inject WeatherForecastService ForecastService
 
 <PageTitle>Weather graph data</PageTitle>
