--- a/ForecastsWebApp/Pages/_Host.cshtml
+++ b/ForecastsWebApp/Pages/_Host.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Components.Web
-@namespace ForecastsBlazor.Pages
+@namespace ForecastsWebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -12,7 +12,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="ForecastsBlazor.styles.css" rel="stylesheet" />
+    <link href="ForecastsWebApp.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
