--- a/ForecastsWebApp/_Imports.razor
+++ b/ForecastsWebApp/_Imports.razor
@@ -6,6 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ForecastsBlazor
-@using ForecastsBlazor.Shared
+@using ForecastsWebApp
+@using ForecastsWebApp.Shared
 @using ChartJs.Blazor
