--- a/ForecastsWebApp/Pages/GraphData.razor
+++ b/ForecastsWebApp/Pages/GraphData.razor
@@ -71,7 +71,7 @@ else
     private string selectedPeriod = string.Empty;
     private string[] cityTemplates = { "Select city" };
     private string[] periodTemplates = { "Select period", "Day", "Week", "Month", "All" };
-    private string Caption => allValuesMode ? "All values" : "Distinct values";
+    private string Caption => allValuesMode ? "Distinct values" : "All values";
     private bool allValuesMode = true;
 
     private void Toggle()
